--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+<!DOCTYPE html>
+<header>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Rasmus Källqvist's Blog</title>
+</header>
+<body>
+    <p>Hello world!</p>
+</body>
