--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,5 +8,33 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <a href="/">Rasmus Källqvist's Blog</a>
+      <ul>
+        <li><a href="/archive.html">Archive</a></li>
+        <li><a href="/about.html">About</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <h1>About</h1>
+
+    <img class="portrait-image" src="images/portrait.png" alt="A picture of Rasmus Källqvist" />
+
+    <p>This is the personal web page of Rasmus Källqvist, where I write about
+    Programming and Mathematics.</p>
+
+    <p>I'm currently working as a software developer at Mojang Studios, where I
+    get to write both C++ and JavaScript code for Minecraft: Bedrock Edition as
+    part of the Menu UI team.</p>
+
+    <p>In my spare time, I like to collect records, make music, read philosophy,
+    rock climbing, and occasionally DJ:ing.</p>
+  </main>
+
+  <footer>
+    <p>© Rasmus Källqvist 2023</p>
+  </footer>
 </body>
