--- a/about.html
+++ b/about.html
@@ -26,12 +26,14 @@
     <p>This is the personal web page of Rasmus Källqvist, where I write about
     Programming and Mathematics.</p>
 
-    <p>I'm currently working as a software developer at Mojang Studios, where I
+    <p>I'm currently working as a software developer at <a href="https://www.minecraft.net/en-us">Mojang Studios</a>, where I
     get to write both C++ and JavaScript code for Minecraft: Bedrock Edition as
     part of the Menu UI team.</p>
 
     <p>In my spare time, I like to collect records, make music, read philosophy,
     rock climbing, and occasionally DJ:ing.</p>
+
+    <p>You can find me <a href="https://twitter.com/RasmusKallqvist">on Twitter</a>.</p>
   </main>
 
   <footer>
