Start writing on blog post

--- a/about.html
+++ b/about.html
@@ -24,14 +24,21 @@
     <img class="portrait-image" src="images/portrait.png" alt="A picture of Rasmus Källqvist" />
 
     <p>This is the personal web page of Rasmus Källqvist, where I write about
-    Programming and Mathematics.</p>
+      Programming and Mathematics.</p>
 
-    <p>I'm currently working as a software developer at <a href="https://www.minecraft.net/en-us">Mojang Studios</a>, where I
-    get to write both C++ and JavaScript code for Minecraft: Bedrock Edition as
-    part of the Menu UI team.</p>
+    <p>I'm currently working as a software developer at <a href="https://www.minecraft.net/en-us">Mojang Studios</a>,
+      where I
+      get to write both C++ and JavaScript code for Minecraft: Bedrock Edition as
+      part of the Menu UI team.</p>
+
+    <p>I studied Embedded Systems at the Royal Insitute of Technology at
+    Stockholm, where I learnt C programming and electronics. Since then, I have
+    found an interest in the more theoretical sides of software development,
+    with a bit of functional programming, program language theory and
+    mathematics.</p>
 
     <p>In my spare time, I like to collect records, make music, read philosophy,
-    rock climbing, and occasionally DJ:ing.</p>
+      rock climbing, and occasionally DJ:ing.</p>
 
     <p>You can find me <a href="https://twitter.com/RasmusKallqvist">on Twitter</a>.</p>
   </main>
