--- a/about.html
+++ b/about.html
@@ -32,15 +32,16 @@
       part of the Menu UI team.</p>
 
     <p>I studied Embedded Systems at the Royal Insitute of Technology at
-    Stockholm, where I learnt C programming and electronics. Since then, I have
-    found an interest in the more theoretical sides of software development,
-    with a bit of functional programming, program language theory and
-    mathematics.</p>
+      Stockholm, where I learnt C programming and electronics. Since then, I have
+      found an interest in the more theoretical sides of software development,
+      with a bit of functional programming, program language theory and
+      mathematics.</p>
 
     <p>In my spare time, I like to collect records, make music, read philosophy,
       rock climbing, and occasionally DJ:ing.</p>
 
-    <p>You can find me <a href="https://twitter.com/RasmusKallqvist">on Twitter</a>.</p>
+    <p>You can also find me <a href="https://twitter.com/RasmusKallqvist">on Twitter</a> and on <a
+        href="https://github.com/Warwolt">GitHub</a>.</p>
   </main>
 
   <footer>
